fix: Renaming the header so it's clear to users who are looking for aggregations that they are in the right place

--- a/aggregations.mdx
+++ b/aggregations.mdx
@@ -12,7 +12,7 @@ to track the largest purchase amount a cardholder has made in the past 30 days.
 
 ---
 
-## Feature definition
+## Set up a data aggregation using windowed features
 
 Here is an example of a [`windowed`](/api-docs/#windowed) feature representing the number of
 failed logins in the last 10 minutes, 30 minutes, and 1 day:
