fix: Including more info about windowed features being aggregates

--- a/aggregations.mdx
+++ b/aggregations.mdx
@@ -6,8 +6,8 @@ description: Define features as aggregations of data over sliding time ranges.
 published: true
 ---
 
-Windowed features are features defined over time ranges. For example, you can use windowed
-features to count the number of login attempts made by a user over the past 10 minutes, or
+Create a data aggregation over a time range using Chalk's Windowed Features.
+For example, use windowed features to count the number of login attempts made by a user over the past 10 minutes, or
 to track the largest purchase amount a cardholder has made in the past 30 days.
 
 ---
