--- a/aggregations.mdx
+++ b/aggregations.mdx
@@ -6,7 +6,7 @@ description: Define features as aggregations of data over sliding time ranges.
 published: true
 ---
 
-Create a data aggregation over a time range using Chalk's Windowed Features.
+Create a data aggregation over a time range using a Windowed Feature.
 For example, use windowed features to count the number of login attempts made by a user over the past 10 minutes, or
 to track the largest purchase amount a cardholder has made in the past 30 days.
 
