fix: Adding a backlink/reference to materialized aggregations

--- a/aggregations.mdx
+++ b/aggregations.mdx
@@ -12,6 +12,8 @@ to track the largest purchase amount a cardholder has made in the past 30 days.
 
 ---
 
+Note: Chalk has first-class support for [materializing aggregations, see the docs!](/materialized_aggregations)
+
 ## Set up a data aggregation using windowed features
 
 Here is an example of a [`windowed`](/api-docs/#windowed) feature representing the number of
