--- a/underscore.mdx
+++ b/underscore.mdx
@@ -202,9 +202,12 @@ combination with underscore references to transform features:
 #### String Manipulation
 
 * [`ends_with`](/api-docs#ends_with)
+* [`jaro_winkler_distance`](/api-docs#jaro_winkler_distance)
+* [`length`](/api-docs#length)
 * [`levenshtein_distance`](/api-docs#levenshtein_distance)
 * [`like`](/api-docs#like)
 * [`lower`](/api-docs#lower)
+* [`partial_ratio`](/api-docs#partial_ratio)
 * [`regexp_extract`](/api-docs#regexp_extract)
 * [`regexp_extract_all`](/api-docs#regexp_extract_all)
 * [`regexp_like`](/api-docs#regexp_like)
@@ -231,6 +234,7 @@ combination with underscore references to transform features:
 * [`spooky_hash_v2_32`](/api-docs#spooky_hash_v2_32)
 * [`spooky_hash_v2_64`](/api-docs#spooky_hash_v2_64)
 * [`string_to_bytes`](/api-docs#string_to_bytes)
+* [`struct_pack`](/api-docs#struct_pack)
 
 #### Math
 
@@ -262,12 +266,14 @@ combination with underscore references to transform features:
 * [`from_unix_seconds`](/api-docs#from_unix_seconds)
 * [`hour_of_day`](/api-docs#hour_of_day)
 * [`is_us_federal_holiday`](/api-docs#is_us_federal_holiday)
+* [`last_day_of_month`](/api-docs#last_day_of_month)
 * [`month_of_year`](/api-docs#month_of_year)
 * [`to_iso8601`](/api-docs#to_iso8601)
 * [`total_seconds`](/api-docs#total_seconds)
 * [`unix_milliseconds`](/api-docs#unix_milliseconds)
 * [`unix_seconds`](/api-docs#unix_seconds)
 * [`week_of_year`](/api-docs#week_of_year)
+* [`year`](/api-docs#year)
 
 #### URL Manipulation
 
