--- a/changelog.mdx
+++ b/changelog.mdx
@@ -17,7 +17,7 @@ displays the available keys for filtering, shown below.
 
 ### Search by file name in the source code viewer
 
-In the Source Code viewer, found in the Deployments page of the dashboard, you can now search for files by name
+In the Source Code viewer on the Deployments page of the dashboard, you can now search for files by name
 in addition to the existing text search through the source code from the linked deployment.
 
 ![Source code viewer with file search](/img/view-source-file-explorer.png)
