--- a/changelog.mdx
+++ b/changelog.mdx
@@ -23,11 +23,12 @@ for keywords in your source code, you can now also search for your files by name
 
 ![Source code viewer with file search](/img/view-source-file-explorer.png)
 
-### Include query context in metadata field
+### Include query context in Chalk Client queries
 
-The Chalk Client now offers an [include_metadata](/api-docs#ChalkClient.query.include_meta) option to associate
-a key-value dictionary with a query. This can be useful for storing information such as context about the query
-or for tagging and labeling queries.
+The Chalk Client now offers a [query_context](/api-docs#ChalkClient.query.query_context) field that can be accessed
+by Python resolvers, allowing you to pass additional information in your queries. The `query_context` is available
+for online queries, bulk online queries, and offline queries for both `ChalkClient` and
+`ChalkGRPCClient`, and can be tested using `ChalkClient.check`. 
 
 ### Expressions support more string, encoding, and date functions
 
