--- a/changelog.mdx
+++ b/changelog.mdx
@@ -11,7 +11,7 @@ description: Updates to Chalk!
 
 You can now search logs in the Logs Explorer in the dashboard using a key-value pair query format:
 `key1:value1 key2:value2 ...`. This allows you to combine multiple filters at once. The Logs Explorer
-displays the available keys for filtering, shown below.
+displays the available keywords for filtering, shown below.
 
 ![Updated log explorer](/img/log-search-filters.png)
 
