--- a/changelog.mdx
+++ b/changelog.mdx
@@ -18,7 +18,8 @@ displays the available keywords for filtering, shown below.
 ### Search by file name in the source code viewer
 
 In the Source Code viewer on the Deployments page of the dashboard, you can now search for files by name
-in addition to the existing text search through the source code from the linked deployment.
+We've extended our Dashboard's Deployment Source Code Viewer! In addition to searching
+for keywords in your source code, you can now also search for your files by name.
 
 ![Source code viewer with file search](/img/view-source-file-explorer.png)
 
