--- a/changelog.mdx
+++ b/changelog.mdx
@@ -746,7 +746,7 @@ backfill`](/cli/aggregate_backfill) commands. Check it out to see what resolvers
 status, and other details that will help you drill down to investigate performance. 
 
 For more details on aggregate backfills, see our documentation on [managing windowed
-aggregations](/docs/aggregations#managing-aggregations).
+aggregations](/docs/materialized_aggregations).
 
 ## August 19, 2024
 
