--- a/best-practices.mdx
+++ b/best-practices.mdx
@@ -17,7 +17,7 @@ and recommended patterns for building and maintaining your Chalk solution!
 Define integrations through the Chalk dashboard and check that they're connecting properly using the `Test Data Source` button.
 ![Test Data Source](/img/test-datasource.png)
 
-### Avoid naming your data sources by their "type", e.g. don't call your postgres data source "postgres"
+### Avoid naming your data sources by their "type", e.g. don't call your Postgres data source "postgres"
 
 Though this works, it can lead to ambiguity in SQL resolvers when you add multiple data sources of the same type. This occurs
 because Chalk lets you refer to data sources by their type if you've only linked one data source of that type to Chalk. In
