--- a/self-join.mdx
+++ b/self-join.mdx
@@ -11,7 +11,7 @@ Self Joins in Chalk are done via intermediary feature sets
 
 ## Recommended Implementation
 
-To implement a self join, add a new feature set, containing a join to your initial feature—this can be either a has_many [DataFrame](/docs/)
+To implement a self join, add a new feature class, containing a join to your initial feature class.
 
 <TipInfo>
   In both the cases below you will need to resolve the primary key of the linking feature set. This can be done through a SQL resolver that pulls
