--- a/self-join.mdx
+++ b/self-join.mdx
@@ -7,7 +7,7 @@ import { TipInfo } from '@/components/Tip'
 
 ---
 
-Self Joins in Chalk are done via intermediary feature sets
+Self Joins in Chalk are done via intermediary feature classes.
 
 ## Recommended Implementation
 
