--- a/self-join.mdx
+++ b/self-join.mdx
@@ -14,7 +14,7 @@ Self Joins in Chalk are done via intermediary feature classes.
 To implement a self join, add a new feature class, containing a join to your initial feature class.
 
 <TipInfo>
-  In both the cases below you will need to resolve the primary key of the linking feature set. This can be done through a SQL resolver that pulls
+   You will need to resolve the primary key of the linking feature set. This can be done through a SQL resolver that pulls
   in the Primary key of the feature. For example, for the `has-one` join below, you could create a SQL resolver that resolves `PrequelLink`
   by running a query like: `SELECT id, prequel_id FROM books`.
 </TipInfo>
