--- a/self-join.mdx
+++ b/self-join.mdx
@@ -22,7 +22,7 @@ To implement a self join, add a new feature class, containing a join to your ini
 ### Has-one self-join
 
 To specify a `has_one` self-join:
-1). Create a new feature set,
+1). Create a new feature class,
 2). Link your new feature set back to the original one through a [has-one](/docs/has-one) join.
 
 ```python
