--- a/self-join.mdx
+++ b/self-join.mdx
@@ -23,7 +23,7 @@ To implement a self join, add a new feature class, containing a join to your ini
 
 To specify a `has_one` self-join:
 1). Create a new feature class,
-2). Link your new feature set back to the original one through a [has-one](/docs/has-one) join.
+2). Link your new feature class back to the original one through a [has-one](/docs/has-one) join.
 
 ```python
 from typing import Optional
