--- a/self-join.mdx
+++ b/self-join.mdx
@@ -56,7 +56,7 @@ class Book:
 ### Has-many self-join
 
 To create a `has_many` self-join:
-1). Create a new feature set,
+1). Create a new feature class,
 2). Link your new feature set back to the original one through a [has-many](/docs/has-many) join.
 
 ```python
