--- a/self-join.mdx
+++ b/self-join.mdx
@@ -57,7 +57,7 @@ class Book:
 
 To create a `has_many` self-join:
 1). Create a new feature class,
-2). Link your new feature set back to the original one through a [has-many](/docs/has-many) join.
+2). Link your new feature class back to the original one through a [has-many](/docs/has-many) join.
 
 ```python
 @features
