--- a/fraud-tutorial.mdx
+++ b/fraud-tutorial.mdx
@@ -957,7 +957,7 @@ online store (until the feature is evicted from the cache).
 ### Adding Offline Resolvers
 
 By setting up offline SQL resolvers, we are telling Chalk that there are
-time when we don't want to pull data from our Postgres data source and instead
+times when we don't want to pull data from our Postgres data source and instead
 want to get our data from a bulk data store. There are a couple reasons why
 we might want to do this:
 1). We don't want to overwhelm our Postgres data source with requests that
